--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -50,4 +50,39 @@ html, body,#__next{
 
 .chat{
   color: white;
+  width: 100%;
+  max-width: 800px;
+}
+
+.chatControllers{
+  display: flex;
+}
+
+.chatControllers input{
+  font-size: 1.5em;
+  padding: 0.2em;
+}
+
+.messageContainer{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #4b4b4b;
+  margin: 0.3em;
+  padding: 0.3em;
+}
+
+.myMessage{
+  background-color: rgb(0, 99, 0);
+}
+
+.userMessage, .textMessage{
+  margin: 0;
+  padding: 0;
+}
+
+.userMessage{
+  text-align: left;
 }
