--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -49,9 +49,9 @@ html, body,#__next{
 }
 
 .chat{
-  color: white;
   width: 100%;
   max-width: 800px;
+  color: white;
 }
 
 .chatControllers{
@@ -64,17 +64,25 @@ html, body,#__next{
 }
 
 .messageContainer{
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  background-color: #4b4b4b;
+  align-items: self-start;
   margin: 0.3em;
   padding: 0.3em;
 }
-
+.message{
+  background-color: #4b4b4b;
+  padding: 0.3em 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .myMessage{
+  align-items: self-end;
+}
+
+.bg-green{
   background-color: rgb(0, 99, 0);
 }
 
