--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,5 +1,4 @@
 *{
-  font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
 
@@ -7,8 +6,28 @@ html, body,#__next{
   width: 100%;
   height: 100%;
   background-color: black;
-  margin: 0;
-  padding: 0;
+}
+
+h1{
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3em;
+  font-weight: bold;
+}
+
+h2{
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2em;
+}
+
+h3{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5em;
+}
+
+button{
+  font-size: 1.5em;
 }
 
 .container{
@@ -50,7 +69,9 @@ html, body,#__next{
 
 .chat{
   width: 100%;
+  height: 100%;
   max-width: 800px;
+  overflow-y: scroll;
   color: white;
 }
 
@@ -93,4 +114,8 @@ html, body,#__next{
 
 .userMessage{
   text-align: left;
+}
+
+.title-chat{
+  margin: 0.5em;
 }
